--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,12 @@
       crossorigin="anonymous"
     />
 
-    <title>akika app</title>
+    <title>AKAIKE App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal-wrapper"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
