--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       crossorigin="anonymous"
     />
 
-    <title>akika app</title>
+    <title>Akaike app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
